Fix spacing between section of the mailing lists. Update mailer preview to render less documents for performance.

--- a/app/assets/stylesheets/mailers/subscription_mailer.css.scss
+++ b/app/assets/stylesheets/mailers/subscription_mailer.css.scss
@@ -77,6 +77,8 @@ body {
     margin-bottom: 10px;
     overflow: auto;
   }
+
+  .doc-toc { margin-bottom: 60px; }
 }
 
 table.highlight {
@@ -117,7 +119,7 @@ tr.social {
 
 #main-content {
   table { width: 100%; }
-  
+
   h1 {
     clear: both;
     color: $fr-blue;
